@@ -1,3 +1,7 @@
+2001-12-23  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Display/KAPVIEW.pm (vector): Add multi colored vectors to polplot
+
 2001-12-13  Tim Jenness  <timj@jach.hawaii.edu>
 
 	------------- Starlink Release V3.0-3	-----------------
